# security-advisory-fetcher

./: .gitignore  README.md  fetcher.py  gomodsaver.py  pyproject.toml
data/: all_mod_vulnerabilities.json  go.mod  out.json  partners.csv  sources.csv
src/security-advisor/: __init__.py  cli.py  utils.py
src/security-advisor/strategies/: base_strategy.py  go_mod_strategy.py
src/security_advisor/: cli.py  core.py
src/security_advisor/strategies/: __init__.py  go_mod_strategy.py
tests/: test.py
